# TaskFusion

./: README.md  taskfusion.d
taskfusion_cli/: Cargo.toml  snapshot.txt  theme.toml
taskfusion_cli/src/: main.rs
taskfusion_gui/: package-lock.json  package.json
taskfusion_gui/src/: index.html  main.js  styles.css  visuals.css  visuals.html  visuals.js
taskfusion_gui/src-tauri/: Cargo.toml  snapshot.txt  tauri.conf.json
taskfusion_gui/src-tauri/src/: main.rs
