[package]
name = "taskfusion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
colorize = "0.1.0"
libc = "0.2.140"
nix = "0.26.2"
prettytable = "0.10.0"
procfs = "0.15.1"
psutil = "3.2.2"
sysinfo = "0.28.4"
termion = "2.0.1"
cursive = { version = "0.20", default-features = false, features = ["termion-backend","toml"] }
cursive_table_view = "0.14.0"
rand = "0.8.5"
chrono = "0.4.24"
cursive_tree_view = "0.8.0"
toml = "0.7.3"
regex = "1.8.1"
