[package]
name = "yay"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.28.4"
colored = "2.0.0"
colorize = "0.1.0"
libc = "0.2.140"
nix = "0.26.2"
prettytable = "0.10.0"
psutil = "3.2.2"
termion = "2.0.1"
procfs = "0.15.1"
chrono = "0.4.19"
regex ="1.8.1"



[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
